# couchdb

./: .gitignore  CHANGES  LICENSE  Makefile.am  NEWS  NOTICE  acinclude.m4.in  blargh.sh  configure.ac  doc_11k.json  doc_11k_integers.json  doc_2_5k.json  license.skip  perf.py  raindrop-perf.py
ape/: app.js  util.js
ape/views/bar/: map.js
etc/couchdb/: Makefile.am  default.ini.tpl.in  local.ini
m4/: couch_curl.m4  couch_erlang.m4  couch_h2m.m4  couch_icu.m4  couch_init.m4  couch_js.m4  couch_launchd.m4  couch_pthreads.m4  couch_snappy.m4  couch_windows.m4  couch_windows_hack.m4
perf/: log  megaview.js  run.py  simpleview.js
share/: Makefile.am
share/server/: ape.js  couchjs_mapred.js  emonk_mapred.js  loop.js  render.js  state.js  util.js  validate.js  views.js
share/www/: bespin.html  database.html
share/www/script/: couch_test_runner.js  couch_tests.js  futon.browse.js
share/www/style/: layout.css
src/: Makefile.am
src/chttpd/src/: chttpd.erl  chttpd_db.erl  chttpd_external.erl  chttpd_misc.erl  chttpd_rewrite.erl  chttpd_show.erl  chttpd_view.erl
src/config/src/: config.erl
src/couch/: Makefile.am
src/couch/include/: couch_db.hrl
src/couch/src/: couch.app.tpl.in  couch.erl  couch_app.erl  couch_auth_cache.erl  couch_btree.erl  couch_changes.erl  couch_compaction_daemon.erl  couch_config_writer.erl  couch_db.erl  couch_db_update_notifier_sup.erl  couch_db_updater.erl  couch_doc.erl  couch_drv.erl  couch_emsort.erl  couch_external_manager.erl  couch_external_server.erl  couch_file.erl  couch_httpd.erl  couch_httpd_auth.erl  couch_httpd_cors.erl  couch_httpd_external.erl  couch_httpd_misc_handlers.erl  couch_httpd_oauth.erl  couch_httpd_proxy.erl  couch_httpd_rewrite.erl  couch_httpd_stats_handlers.erl  couch_httpd_vhost.erl  couch_log.erl  couch_native_process.erl  couch_os_daemons.erl  couch_os_process.erl  couch_passwords.erl  couch_proc_manager.erl  couch_secondary_sup.erl  couch_server.erl  couch_server_sup.erl  couch_stats_aggregator.erl  couch_stream.erl  couch_sup.erl  couch_users_db.erl  (+3 more)
src/couch_app/: Makefile.am
src/couch_app/src/: couch_app.app.src  couch_app.erl
src/couch_index/: Makefile.am
src/couch_index/src/: couch_index.app.src  couch_index.erl  couch_index_api.erl  couch_index_compactor.erl  couch_index_server.erl  couch_index_updater.erl  couch_index_util.erl
src/couch_mrview/: Makefile.am
src/couch_mrview/include/: couch_mrview.hrl
src/couch_mrview/src/: couch_mrview.app.src  couch_mrview.erl  couch_mrview_cleanup.erl  couch_mrview_compactor.erl  couch_mrview_http.erl  couch_mrview_index.erl  couch_mrview_show.erl  couch_mrview_test_util.erl  couch_mrview_updater.erl  couch_mrview_util.erl
src/couch_mrview/test/: 02-basics.t  02-map-views.t  03-red-views.t  04-index-info.t  05-collation.t  06-all-docs.t
src/couch_replicator/: Makefile.am
src/couch_replicator/src/: couch_replicator.erl  couch_replicator_api_wrap.erl  couch_replicator_httpc.erl  couch_replicator_httpc_pool.erl  couch_replicator_httpd.erl  couch_replicator_job_sup.erl  couch_replicator_manager.erl  couch_replicator_notifier.erl  (+2 more)
src/couch_show/: Makefile.am
src/couch_show/src/: couch_show.app.src  couch_show.erl
src/couch_views/: README.md
src/couchdb/: Makefile.am  couch.app.tpl.in  couch_ape_context.erl  couch_ape_server.erl  couch_api_wrap.erl  couch_app.erl  couch_auth_cache.erl  couch_btree.erl  couch_btree2.erl  couch_changes.erl  couch_compaction_daemon.erl  couch_db.erl  couch_db.hrl  couch_db_updater.erl  couch_doc.erl  couch_ejson_compare.erl  couch_emsort.erl  couch_file.erl  couch_httpd.erl  couch_httpd_ape.erl  couch_httpd_db.erl  couch_httpd_proxy.erl  couch_httpd_show.erl  couch_httpd_view.erl  couch_js.c  couch_json.erl  couch_json.hrl  couch_json_dec.erl  couch_json_enc.erl  couch_key_tree.erl  couch_lru.erl  couch_native_process.erl  couch_os_daemons.erl  couch_os_process.erl  couch_query_servers.erl  couch_rep.erl  couch_replication_manager.erl  couch_replicator.erl  couch_replicator_doc_copier.erl  couch_server.erl  (+15 more)
src/couchweb/: Makefile.am  couchweb.app  couchweb.erl  couchweb_app.erl  couchweb_res_all_dbs.erl  couchweb_res_db.erl  couchweb_res_info.erl  couchweb_res_utils.erl  couchweb_res_uuids.erl  couchweb_sup.erl  couchweb_utils.erl
src/couchweb/priv/: dispatch.conf
src/eep0018/: Makefile.am  decode_json.c  eep0018.c  eep0018.erl  eep0018.h  encode_json.c  term_buf.c  term_buf.h  yajl.c  yajl_buf.h  yajl_gen.c  yajl_parser.h
src/ejson/: Makefile.am
src/erlang-oauth/: Makefile.am
src/erlang_js/: Makefile.am  js.erl  js_driver.erl
src/erlang_js/priv/: spidermonkey.c
src/erlptr/: Makefile.am  erlptr.erl
src/erlptr/c_src/: erlptr.c
src/erlptr/ebin/: erlptr.app
src/erlptr/priv/: Makefile.am  erlptr.c
src/etap/: Makefile.am
src/ibrowse/: Makefile.am
src/jiffy/: Makefile.am  jiffy.app.in
src/mochiweb/: Makefile.am
src/oauth/: Makefile.am
src/snappy/: Makefile.am
src/webmachine/: Makefile.am  webmachine.erl  webmachine.hrl  webmachine_request.erl  webmachine_resource.erl  wmtrace_resource.erl  wrq.erl
test/etap/: 001-load.t  002-icu-driver.t  020-btree-basics.t  022-btree2-basics.erl  022-emsort-basics.t  023-btree-buffer.t  030-doc-from-json.t  031-doc-to-json.t  032-json-to-doc.t  033-doc-to-json.t  041-uuid-gen.t  060-kt-merging.t  062-kt-remove-leaves.t  065-kt-stemming.t  071-couchdb-rapid-cycle.t  072-cleanup.t  073-changes.t  074-doc-update-conflicts.t  077-couch-db-fast-db-delete-create.t  080-config-get-set.t  081-config-override.t  082-config-register.t  083-config-no-files.t  090-task-status.t  120-stats-collect.t  121-stats-aggregates.t  170-os-daemons.es  170-os-daemons.t  171-os-daemons-config.es  171-os-daemons-config.t  172-os-daemon-errors.t  173-os-daemon-cfg-register.t  174-os-daemon-task-status.t  180-http-proxy.t  200-view-group-no-db-leaks.t  220-compaction-daemon.t  Makefile.am  run.tpl  test_os_task_status.c  test_util.erl.in  (+1 more)
test/javascript/: cli_runner.js
test/nutty/: 01-test-http-basics.py  Makefile.am  couch.py  h.py  nutty  run.tpl
utils/: Makefile.am
(+78 files in other folders)
